// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With SSR Render correctly client side, forceHydration  1`] = `
<div>
  <section>
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, no option  1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content server side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, on idle 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, on idle, requestIdleCallback unsupported 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, on visible, IntersectionObserver unsupported 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, on visible, component not visible 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content server side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, on visible, component visible 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, with DOM event (onClick) 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, with DOM event (onClick), custom selector 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, with custom wrapper element 1`] = `
<div>
  <div>
    <div
      class="label"
    >
      some content client side
    </div>
  </div>
</div>
`;

exports[`With SSR Render correctly client side, with delay 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, with whenInputPending at true and input pending 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, with whenInputPending at true and isInputPending unsupported 1`] = `
<div>
  <section
    data-hydration-on-demand="true"
  >
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, with whenInputPending at true and no input pending 1`] = `
<div>
  <section>
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`With SSR Render correctly client side, with whenInputPending at true, isInputPending unsupported and isInputPendingFallbackValue at false 1`] = `
<div>
  <section>
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;

exports[`Without SSR Don't render client side only with fallback disabled 1`] = `
<div>
  <section />
</div>
`;

exports[`Without SSR Render correctly client side only 1`] = `
<div>
  <section>
    <div
      class="label"
    >
      some content client side
    </div>
  </section>
</div>
`;
